
MWRFITS_CHUNKS- Added /APPEND option.

-------------------------------------------------------------------------------
v4_10_3 (Jun 27, 2003)
Tagged for photoop v0_10.

ATV          - Merged with Aaron Barth's version 1.4 (by Finkbeiner).
               Merged to include using SPLOT/SOPLOT instead of PLOT,
               use 5 digit pixel coords, some Healpix support (though
               the libraries are not yet in idlutils).
               Fink did not merge in support for reversed CTYPE values
               in FITS headers, e.g. DEC,RA instead of RA,DEC.
CAP_DISTANCE: New function, moved from photoop/RESOLVE_RUN_LOCAL.
GVERTS: Fix zero-area failure.
MUNU_TO_RADEC,RADEC_TO_MUNU: Computation of PHI now done properly in both
               routines, and done analytically rather than numerically.
               Before this, I at least had a correct numerical computation
               in MUNU_TO_RADEC.
src/mangle1.2/balkanize.c, harmonize.c, poly2poly.c, ransack.c,
               snap.c, unify.c - Fixed ransack bug where it wasn't
               checking for NULL polygons after throwing them away.

-------------------------------------------------------------------------------
v4_10_2 (Jun 20, 2003)
Tagged for photoop v0_9.  Make sure that mangle code builds.

data/sdss/sdssMaskbits.par: Add RESOLVE_STATUS flag, which probably
                deprecates the RESOLVE flag.
lib/Makefile: When installing, copy over *.a files and Makefile, not 
                that they're needed.
src/Makefile: Note that mangle1.2 must be built before idlmangle!
                This prevented the mangle code from building in v4_10_0,v4_10_1.
src/idlmangle/Makfile: Copy source code when installing, not that it's needed.

-------------------------------------------------------------------------------
v4_10_1 (Jun 18, 2003)
Tagged for photoop v0_9.  Also ATV bug fixes for IDL 5.5 and later.

ATV           - Call PSCONFIG instead of CMPS_FORM for making PostScript