@@ -9,7 +9,7 @@ SHELL = /bin/sh
 CFLAGS  = -I$(IDL_DIR)/external -I$(IDLUTILS_DIR)/src/mangle1.2 -DCHECK_LEAKS
 #
 .c.o : $(IDLUTILS_DIR)/src/mangle1.2/polygon.h export.h 
-	$(CC) -c $(CCCHK) $(CFLAGS) $(IDL_FLAG) $*.c
+	$(CC) -c $(CCCHK) $(CFLAGS) $(IDL_FLAG) $(X_CFLAGS) $*.c
 
 LIB = $(IDLUTILS_DIR)/lib
 BIN = $(IDLUTILS_DIR)/bin
@@ -23,7 +23,7 @@ all : $(LIB)/libidlmangle.$(SO_EXT)
 
 $(LIB)/libidlmangle.$(SO_EXT): $(OBJECTS) $(IDLUTILS_DIR)/lib/libmangle.a
 	$(LD) -shared $(X_LD_FLAGS) -o $(LIB)/libidlmangle.$(SO_EXT) $(OBJECTS) \
-		-lmangle $(MAKE_FTNLIB) -L/usr/lib/gcc-lib/i386-redhat-linux/2.96 \
+		-lmangle \
 		-L$(IDLUTILS_DIR)/lib
 
 install :
